<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_upload_document"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:srcCompat="@drawable/img_attach_document"
            android:layout_marginTop="@dimen/_60sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_add_attatchments"
            style="@style/VivantTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/UPLOAD_ATTACHMENTS"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_upload_document"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_add_attatchments_desc"
            style="@style/VivantDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/UPLOAD_ATTACHMENTS_DESC"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@+id/lbl_add_attatchments"
            app:layout_constraintStart_toStartOf="@+id/lbl_add_attatchments"
            app:layout_constraintTop_toBottomOf="@+id/lbl_add_attatchments"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_upload_existing_document"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/background_dotted"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_add_attatchments_desc">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_upload_existing_document"
                style="@style/VivantDescription"
                android:gravity="center"
                android:text="@string/UPLOAD_EXISTING_DOCUMENT"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_upload_new_document"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/background_dotted"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_upload_existing_document">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_upload_new_document"
                style="@style/VivantDescription"
                android:gravity="center"
                android:text="@string/UPLOAD_NEW_DOCUMENT"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:visibility="gone"
            style="@style/CustomButton"
            android:text="@string/UPLOAD"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/layout_upload_new_document"
            app:layout_constraintStart_toStartOf="@+id/layout_upload_new_document"
            app:layout_constraintTop_toBottomOf="@+id/layout_upload_new_document"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>